Task description and comments properly render markdown, comments overflowing (temp fix set it to fixed height)

--- a/frontend/src/components/TaskCardModal.sass
+++ b/frontend/src/components/TaskCardModal.sass
@@ -15,17 +15,21 @@
       margin-right: 1 * $unit
     .TaskCardModal-main
       width: 85 * $unit
-      padding: 4 * $unit
+      margin: 4 * $unit
+      overflow: hidden
       .TaskCardModal-main-label
         margin-bottom: 4 * $unit
       .TaskCardModal-main-icon
-          margin-left: 1 * $unit
-          margin-bottom: 1 * $unit
-          width: 2 * $unit
-          height: 2 * $unit
+        margin-left: 1 * $unit
+        margin-bottom: 1 * $unit
+        width: 2 * $unit
+        height: 2 * $unit
       .TaskCardModal-main-description
         margin-top: 1 * $unit
-        padding: 2 * $unit
+        padding-top: $unit
+        padding-right: 2 * $unit
+        padding-bottom: $unit
+        padding-left: 2 * $unit
         min-height: 30 * $unit
         margin-bottom: 3 * $unit
       .TaskCardModal-main-newComment
@@ -39,7 +43,7 @@
           .TaskCardModal-main-newComment-cancel-icon
             height: 2 * $unit
             width: 2 * $unit
-            color: 	#DCDCDC
+            color: #DCDCDC
     .TaskCardModal-sidebar
       width: 35 * $unit
       padding: 4 * $unit
@@ -51,6 +55,3 @@
           align-items: center
           .TaskCardModal-sidebar-card-box-taskPriority
             align-items: flex-start
-
-
-
